# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1136 2013/06/09 23:12:51 vapier Exp $

  09 Jun 2013; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Add upstream CPE tag (security info) from ChromiumOS.

  09 Jun 2013; Tom Wijsman <TomWij@gentoo.org> gentoo-sources-3.7.10.ebuild:
  Dropped arm keyword on 3.7.10 to discourage arm users from using the insecure
  kernel version, 3.8.13 was stabilized for them.

  09 Jun 2013; Markus Meier <maekke@gentoo.org> gentoo-sources-3.8.13.ebuild:
  arm stable, bug #469508

*gentoo-sources-3.0.81 (07 Jun 2013)
*gentoo-sources-3.4.48 (07 Jun 2013)
*gentoo-sources-3.9.5 (07 Jun 2013)

  07 Jun 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.0.81.ebuild,
  +gentoo-sources-3.4.48.ebuild, +gentoo-sources-3.9.5.ebuild,
  -gentoo-sources-3.0.75.ebuild, -gentoo-sources-3.4.42.ebuild,
  -gentoo-sources-3.8.10.ebuild, -gentoo-sources-3.8.9.ebuild,
  -gentoo-sources-3.9.0.ebuild:
  Linux patches 3.0.81, 3.4.38 and 3.9.5. Removed old ebuilds from April.

*gentoo-sources-3.2.46 (01 Jun 2013)

  01 Jun 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.2.46.ebuild:
  Linux patch 3.2.46.

*gentoo-sources-3.4.47 (25 May 2013)
*gentoo-sources-3.9.4 (25 May 2013)
*gentoo-sources-3.0.80 (25 May 2013)

  25 May 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.0.80.ebuild,
  +gentoo-sources-3.4.47.ebuild, +gentoo-sources-3.9.4.ebuild:
  Linux patches 3.0.80, 3.4.47 and 3.9.4.

*gentoo-sources-3.0.79 (20 May 2013)
*gentoo-sources-3.4.46 (20 May 2013)
*gentoo-sources-3.9.3 (20 May 2013)

  20 May 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.0.79.ebuild,
  +gentoo-sources-3.4.46.ebuild, +gentoo-sources-3.9.3.ebuild:
  Linux patches 3.0.79, 3.4.46 and 3.9.3. Added XATTR_USER_PREFIX patch, adds
  support for namespace user.pax.* on tmpfs; fixes bug #470644.
