@@ -1,6 +1,14 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1136 2013/06/09 23:12:51 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1137 2013/06/13 22:27:13 tomwij Exp $
+
+*gentoo-sources-3.9.6 (13 Jun 2013)
+*gentoo-sources-3.4.49 (13 Jun 2013)
+*gentoo-sources-3.0.82 (13 Jun 2013)
+
+  13 Jun 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.0.82.ebuild,
+  +gentoo-sources-3.4.49.ebuild, +gentoo-sources-3.9.6.ebuild:
+  Linux patches 3.0.82, 3.4.49 and 3.9.6.
 
   09 Jun 2013; Mike Frysinger <vapier@gentoo.org> metadata.xml:
   Add upstream CPE tag (security info) from ChromiumOS.
